# houdini-sop-test-model

./: .gitignore  CMakeLists.txt  README.md  SOP_StanfordModel.C  SOP_StanfordModel.h  SOP_StanfordModelBuddha.C  SOP_StanfordModelBuddha.h  SOP_StanfordModelBunny.C  SOP_StanfordModelBunny.h  SOP_StanfordModelDragon.C  SOP_StanfordModelDragon.h
SOP/: CMakeLists.txt  SOP_StanfordModel.C  SOP_StanfordModel.h  SOP_StanfordModelBuddha.C  SOP_StanfordModelBuddha.h  SOP_StanfordModelBunny.C  SOP_StanfordModelBunny.h  SOP_StanfordModelDragon.C  SOP_StanfordModelDragon.h  SOP_TestModel.C  SOP_TestModel.h  SOP_TestModelBuddha.C  SOP_TestModelBuddha.h  SOP_TestModelBunny.C  SOP_TestModelBunny.h  SOP_TestModelDragon.C  SOP_TestModelDragon.h  SOP_TestModelKitten.C  SOP_TestModelKitten.h
